# image-converter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  execute.sh  front.py  input.py  install.sh  main.py  pyproject.toml  requirements.txt  uninstall.sh
app/: front.py  image_card.py  menus.py
code/: __init__.py  args.py  consts.py  input.py  lang.py  paths.py  processing.py  settings.py
locale/: shell.en.yml  shell.es.yml
src/: __init__.py  __main__.py  args.py  cli.py  consts.py  lang.py  paths.py  processing.py  settings.py
src/image_converter/: __init__.py  __main__.py  args.py  cli.py  consts.py  lang.py  paths.py  processing.py  settings.py
