[project]
name = "image-converter"
version = "1.6.0"
description = ""
authors = [
    {name = "Alejrot"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "python-i18n[yaml] (>=0.3.9,<0.4.0)"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]  
include = ["src"]

[dependency-groups]
test = [
    "ruff>=0.14.3",
]

[project.scripts]
img-convert = "src:main"
