[project]
name = "image-converter"
version = "1.6.0"
description = ""
authors = [
    {name = "Alejrot"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10, <3.15"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "python-i18n[yaml] (>=0.3.9,<0.4.0)"
]


[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"


[dependency-groups]
test = [
    "ruff>=0.14.3",
]

[project.scripts]
image-converter = "image_converter:main"
